--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Hike SD",
+  "name": "Hike-SD",
   "version": "1.0.0",
   "description": "Search Hiking Trails in San Diego",
   "main": "server.js",
@@ -9,12 +9,15 @@
     "watch": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "authors": "Zach Nylen, Nicholas Serra",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.0",
     "express-session": "^1.16.1",
     "mysql2": "^1.6.5",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^5.8.6"
   }
 }
